--- a/samples/aspnet-core/WebChatBot/Views/Home/Index.cshtml
+++ b/samples/aspnet-core/WebChatBot/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
         botId: '<YOUR_BOT_ID>',
         botName:'<YOUR_BOT_NAME>',
         targetElement: 'botChat', // html element where the webchat gets rendered
-        secret: '<YOUR_WEBCHAT_SECRET>',
+        secret: 'KPPZ8OsuZNU.cwA.dh4.5-mTa933D3wAJCba4KFt9Oapjmq4IbutG6PnIcTIIxM',
         myCustomArg: '@Model.Token'
     };   
 
